--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,13 @@
 .*.lb
 
 ## Intermediate documents:
-*.dvi
-*.xdv
+hm.dvi
+hm.xdv
 *-converted-to.*
 # these rules might exclude image files for figures etc.
-*.ps
+hm.ps
 *.eps
-*.pdf
+hm.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
