--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -1,11 +1,9 @@
-on: [push]
-
 jobs:
   create_draft_release:
     runs-on: ubuntu-latest
 
     outputs:
-      upload_url: ${{ steps.create_draft_release.outputs.upload_url }}
+      id: ${{ steps.create_draft_release.outputs.id }}
 
     steps:
       - name: Create draft release on tags
@@ -32,14 +30,14 @@ jobs:
     
     - name: Set git user
       run: |
-        git config --global user.name github-actions
+        git config -global user.name github-actions
         git config --global user.email github-actions-bot@users.noreply.github.com
     
     - name: Define env
       run: |
         echo "GITHUB_TAG=$(git describe --always --tags)" >> $GITHUB_ENV
         echo "BUILD_DATE=$(date +'%Y_%m_%d')" >> $GITHUB_ENV
-
+    
     - uses: actions/cache@v2
       name: Tectonic Cache
       with:
@@ -47,31 +45,54 @@ jobs:
         key: ${{ runner.os }}-tectonic-${{ hashFiles('**/*.tex') }}
         restore-keys: |
           ${{ runner.os }}-tectonic-
-
+    
     - uses: wtfjoke/setup-tectonic@v1
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-
+        biber-version: "latest"
+ 
+    - name: Prepare env
+      run: |
+        sudo apt update
+        sudo apt install fonts-opendyslexic fonts-texgyre
+        sudo rm -rf /usr/share/fonts/woff/opendyslexic
+        mkdir assets
+    
     - name: Run Tectonic
       run: |
         tectonic hm.tex
+        mv hm.pdf assets/hm-tg.pdf
     
     - name: Upload PDF
       if: ${{ success() }}
       uses: actions/upload-artifact@v2
       with:
-        path: hm.pdf
-        name: hm.pdf
+        path: assets/hm-tg.pdf
+        name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
         if-no-files-found: error
-
-    - name: Upload release
+    
+    - name: Remove TeX Gyre font customizations, falls back to OpenDyslxic
+      run: sed -i.bak '18,20d' hm.tex
+   
+    - name: Run Tectonic
+      run: |
+        tectonic hm.tex
+        mv hm.pdf assets/hm-od.pdf
+    
+    - name: Upload PDF
+      if: ${{ success() }}
+      uses: actions/upload-artifact@v2
+      with:
+        path: assets/hm-od.pdf
+        name: hm-od-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
+        if-no-files-found: error
+    
+    - name: Upload release assets
       if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
+      id: upload-release-assets
+      uses: dwenegar/upload-release-assets@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ needs.create_draft_release.outputs.upload_url }}
-        asset_path: hm.pdf
-        asset_name: hm-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
-        asset_content_type: application/pdf
+        release_id: ${{ needs.create_draft_release.outputs.id }}
+        assets_path: assets/
