--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -32,7 +32,7 @@ jobs:
     
     - name: Set git user
       run: |
-        git config -global user.name github-actions
+        git config --global user.name github-actions
         git config --global user.email github-actions-bot@users.noreply.github.com
     
     - name: Define env
