--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -78,15 +78,7 @@ jobs:
     - name: Run Tectonic
       run: |
         tectonic hm.tex
-        mv hm.pdf assets/hm-od.pdf
-    
-    - name: Upload PDF
-      if: ${{ success() }}
-      uses: actions/upload-artifact@v2
-      with:
-        path: assets/hm-od.pdf
-        name: hm-od-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
-        if-no-files-found: error
+        mv hm.pdf assets/hm-od.pd
     
     - name: Upload release assets
       if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
