Update github action for recompilation
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -87,11 +87,14 @@ jobs:
     #   run: |
     #     tectonic hm.tex
     #     mv hm.pdf assets/hm-od.pd
-    
-    - name: recompile
-      run: |
-        ./compile.sh
-        mv hm.pdf assets/hm-od.pdf
+   
+    - name: compile.sh again
+      uses: dante-ev/latex-action@latest
+      with:
+        entrypoint: ./compile.sh
+
+    - name: rename od
+      run: mv hm.pdf assets/hm-od.pdf
 
     - name: Upload release assets
       if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
