--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -23,104 +23,81 @@ jobs:
   latex-job:
     needs: create_draft_release
     runs-on: ubuntu-latest
-    
+
     name: Compile And Upload PDF
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    
-    - name: Set git user
-      run: |
-        git config --global user.name github-actions
-        git config --global user.email github-actions-bot@users.noreply.github.com
-    
-    - name: Define env
-      run: |
-        echo "GITHUB_TAG=$(git describe --always --tags)" >> $GITHUB_ENV
-        echo "BUILD_DATE=$(date +'%Y_%m_%d')" >> $GITHUB_ENV
-    
-    # - uses: actions/cache@v2
-    #   name: Tectonic Cache
-    #   with:
-    #     path: ~/.cache/Tectonic
-    #     key: ${{ runner.os }}-tectonic-${{ hashFiles('**/*.tex') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-tectonic-
-    #
-    # - uses: wtfjoke/setup-tectonic@v2
-    #   with:
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
- 
-    # - name: Prepare env
-    #   run: |
-    #     sudo apt update
-    #     sudo apt install fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber
-    #     sudo rm -rf /usr/share/fonts/woff/opendyslexic
-    #     mkdir assets
-    
-    # - name: Run Tectonic
-    #   run: |
-    #     tectonic hm.tex
-    #     mv hm.pdf assets/hm-tg.pdf
-   
-    - name: compile.sh
-      uses: dante-ev/latex-action@latest
-      with:
-        extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
-        entrypoint: ./compile.sh
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: rename tg
-      run: |
-        mkdir assets
-        mv hm.pdf assets/hm-tg.pdf
+      - name: Set git user
+        run: |
+          git config --global user.name github-actions
+          git config --global user.email github-actions-bot@users.noreply.github.com
 
-    - name: Upload PDF
-      if: ${{ success() }}
-      uses: actions/upload-artifact@v2
-      with:
-        path: assets/hm-tg.pdf
-        name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
-        if-no-files-found: error
-    
-    - name: Use OpenDyslxic
-      run: git apply ci.patch
+      - name: Define env
+        run: |
+          echo "GITHUB_TAG=$(git describe --always --tags)" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(date +'%Y_%m_%d')" >> $GITHUB_ENV
 
-    # - name: Run Tectonic
-    #   run: |
-    #     tectonic hm.tex
-    #     mv hm.pdf assets/hm-od.pd
-   
-    - name: compile the notes again
-      uses: dante-ev/latex-action@latest
-      with:
-        root_file: hm.tex
-        compiler: lualatex
-        args: -interaction=nonstopmode -shell-escape
-        extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
+      - name: compile.sh
+        uses: dante-ev/latex-action@latest
+        with:
+          extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
+          entrypoint: ./check.sh
 
-    - name: rename od
-      run: mv hm.pdf assets/hm-od.pdf
+      - name: compile.sh
+        uses: dante-ev/latex-action@latest
+        with:
+          extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
+          entrypoint: ./compile.sh
 
-    - name: Upload release assets
-      if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
-      id: upload-release-assets
-      uses: dwenegar/upload-release-assets@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        release_id: ${{ needs.create_draft_release.outputs.id }}
-        assets_path: assets/
+      - name: rename tg
+        run: |
+          mkdir assets
+          mv hm.pdf assets/hm-tg.pdf
 
-    - name: Prepare for deployment
-      run: |
-        mkdir public
-        mv hm-images/ images/ chapter*.html index.html *.css public/
+      - name: Upload PDF
+        if: ${{ success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          path: assets/hm-tg.pdf
+          name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
+          if-no-files-found: error
 
-    - name: Deploy release
-      if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        publish_branch: master
-        publish_dir: ./public
+      - name: Prepare for deployment
+        run: |
+          mkdir public
+          mv hm-images/ images/ chapter*.html index.html *.css public/
+
+      - name: Deploy release
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: master
+          publish_dir: ./public
+
+      - name: Use OpenDyslxic
+        run: git apply ci.patch
+
+      - name: compile the notes again
+        uses: dante-ev/latex-action@latest
+        with:
+          root_file: hm.tex
+          compiler: lualatex
+          args: -interaction=nonstopmode -shell-escape
+          extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
+
+      - name: rename od
+        run: mv hm.pdf assets/hm-od.pdf
+
+      - name: Upload od assets
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        id: upload-release-assets
+        uses: dwenegar/upload-release-assets@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.create_draft_release.outputs.id }}
+          assets_path: assets/
