--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -101,10 +101,13 @@ jobs:
       #     extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
       #     entrypoint: ./compile.sh
 
-      # - name: rename tg
-      #   run: |
-      #     mkdir assets
-      #     mv hm.pdf assets/hm-tg.pdf
+      - name: full compile
+        run: ./compile.sh
+
+      - name: rename tg
+        run: |
+          mkdir assets
+          mv hm.pdf assets/hm-tg.pdf
 
       # - name: Upload PDF
       #   if: ${{ success() }}
@@ -114,18 +117,18 @@ jobs:
       #     name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
       #     if-no-files-found: error
 
-      # - name: Prepare for deployment
-      #   run: |
-      #     mkdir public
-      #     mv hm-images/ images/ chapter*.html index.html *.css public/
+      - name: Prepare for deployment
+        run: |
+          mkdir public
+          mv hm-images/ images/ chapter*.html index.html *.css public/
 
-      # - name: Deploy release
-      #   if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-      #     publish_branch: master
-      #     publish_dir: ./public
+      - name: Deploy release
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: master
+          publish_dir: ./public
 
       - name: Use OpenDyslxic
         run: git apply ci.patch
@@ -146,15 +149,15 @@ jobs:
       #     args: -interaction=nonstopmode -shell-escape
       #     extra_system_packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra biber texlive-luatex texlive-latex-recommended
 
-      # - name: rename od
-      #   run: mv hm.pdf assets/hm-od.pdf
+      - name: rename od
+        run: mv hm.pdf assets/hm-od.pdf
 
-      # - name: Upload od assets
-      #   if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
-      #   id: upload-release-assets
-      #   uses: dwenegar/upload-release-assets@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     release_id: ${{ needs.create_draft_release.outputs.id }}
-      #     assets_path: assets/
+      - name: Upload od assets
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        id: upload-release-assets
+        uses: dwenegar/upload-release-assets@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.create_draft_release.outputs.id }}
+          assets_path: assets/
