--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -45,6 +45,7 @@ jobs:
           sudo apt update
           sudo apt install fonts-opendyslexic fonts-texgyre
           sudo rm -rf /usr/share/fonts/woff/opendyslexic
+          sudo fc-cache
 
       - name: Setup TexLive
         uses: teatimeguest/setup-texlive-action@v3
