--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@
 *.cb2
 .*.lb
 
+## lwarp auxiliary files:
+*_html*
+*.html
+*.css
+*.txt
+hm.lwarpmkconf
+lwarp*
+
 ## Intermediate documents:
 hm.dvi
 hm.xdv
