--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install fonts and texlive
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: fonts-opendyslexic fonts-texgyre biber texlive-bibtex-extra texlive-luatex texlive-latex-recommended texlive-latex-extra texlive-fonts-extra texlive-science
+          packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra texlive-luatex texlive-latex-recommended texlive-latex-extra texlive-fonts-extra texlive-science
 
       - name: Prepare env
         run: |
@@ -52,10 +52,11 @@ jobs:
 
       - name: full compile
         run: |
-          lualatex -interaction=nonstopmode -shell-escape hm.tex
-          biber hm
+          lualatex -interaction=nonstopmode -shell-escape hm.tex || true
+          lualatex -interaction=nonstopmode -shell-escape hm.tex || true
+          bibtex hm
           makeindex hm
-          lualatex -interaction=nonstopmode -shell-escape hm.tex
+          lualatex -interaction=nonstopmode -shell-escape hm.tex || true
           lualatex -interaction=nonstopmode -shell-escape hm.tex
 
       - name: rename tg
@@ -71,34 +72,21 @@ jobs:
       #     name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
       #     if-no-files-found: error
 
-      # - name: Prepare for deployment
-      #   run: |
-      #     mkdir public
-      #     mv hm-images/ images/ chapter*.html index.html *.css public/
-
-      # - name: Deploy release
-      #   if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-      #     publish_branch: master
-      #     publish_dir: ./public
-
       - name: Use OpenDyslxic
-        run: git apply ci.patch
+        run: git apply ci0.patch
 
       - name: compile again
         run: |
-          lualatex -interaction=nonstopmode -shell-escape hm.tex
-          biber hm
+          lualatex -interaction=nonstopmode -shell-escape hm.tex || true
+          bibtex hm
           makeindex hm
-          lualatex -interaction=nonstopmode -shell-escape hm.tex
+          lualatex -interaction=nonstopmode -shell-escape hm.tex || true
           lualatex -interaction=nonstopmode -shell-escape hm.tex
 
       - name: rename od
         run: mv hm.pdf assets/hm-od.pdf
 
-      - name: Upload od assets
+      - name: Upload assets
         if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
         id: upload-release-assets
         uses: dwenegar/upload-release-assets@v1
@@ -107,3 +95,27 @@ jobs:
         with:
           release_id: ${{ needs.create_draft_release.outputs.id }}
           assets_path: assets/
+
+      - name: Remove font customization for html version
+        run: git apply ci1.patch
+
+      - name: compile html
+        run: |
+          lwarpmk limages
+          lwarpmk html
+          bibtex hm_html
+          lwarpmk printindex
+          lwarpmk html1
+
+      - name: Prepare for deployment
+        run: |
+          mkdir public
+          mv hm-images/ images/ chapter*.html index.html *.css public/
+
+      - name: Deploy release
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: master
+          publish_dir: ./public
