--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -43,7 +43,8 @@ jobs:
       - name: Install fonts and texlive
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra texlive-luatex texlive-latex-recommended texlive-latex-extra texlive-fonts-extra texlive-science
+          execute_install_scripts: true
+          packages: fonts-opendyslexic fonts-texgyre texlive-bibtex-extra texlive-luatex texlive-latex texlive-latex-recommended texlive-latex-extra texlive-fonts-extra texlive-science
 
       - name: Prepare env
         run: |
