--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -40,6 +40,10 @@ jobs:
           echo "GITHUB_TAG=$(git describe --always --tags)" >> $GITHUB_ENV
           echo "BUILD_DATE=$(date +'%Y_%m_%d')" >> $GITHUB_ENV
 
+      - name: fixup
+        run: |
+          rm -rf .texlive2021
+
       - name: Install fonts and texlive
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
