--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Prepare env
         run: |
           sudo apt update
-          sudo apt install fonts-opendyslexic fonts-texgyre bibtex texlive-bibtex-extra texlive-luatex texlive-latex texlive-latex-recommended texlive-latex-base texlive-latex-extra texlive-fonts-extra texlive-science
+          sudo apt install fonts-opendyslexic fonts-texgyre texlive-bibtex-extra texlive-luatex texlive-latex-recommended texlive-latex-base texlive-latex-extra texlive-fonts-extra texlive-science
           sudo rm -rf /usr/share/fonts/woff/opendyslexic
           sudo fc-cache
 
