--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -27,31 +27,27 @@ jobs:
     name: Compile And Upload PDF
 
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v2
 
-      - name: Set git user
+      - name: set git user
         run: |
           git config --global user.name github-actions
           git config --global user.email github-actions-bot@users.noreply.github.com
 
-      - name: Define env
+      - name: define env
         run: |
           echo "GITHUB_TAG=$(git describe --always --tags)" >> $GITHUB_ENV
           echo "BUILD_DATE=$(date +'%Y_%m_%d')" >> $GITHUB_ENV
 
-      - name: fixup
-        run: |
-          rm -rf .texlive2021
-
-      - name: Prepare env
+      - name: prepare env
         run: |
           sudo apt update
           sudo apt install fonts-opendyslexic fonts-texgyre texlive-bibtex-extra texlive-luatex texlive-latex-recommended texlive-latex-base texlive-latex-extra texlive-fonts-extra texlive-science
           sudo rm -rf /usr/share/fonts/woff/opendyslexic
           sudo fc-cache
 
-      - name: full compile
+      - name: compile
         run: |
           lualatex -interaction=nonstopmode -shell-escape hm.tex || true
           lualatex -interaction=nonstopmode -shell-escape hm.tex || true
@@ -65,7 +61,7 @@ jobs:
           mkdir assets
           mv hm.pdf assets/hm-tg.pdf
 
-      # - name: Upload PDF
+      # - name: upload PDF
       #   if: ${{ success() }}
       #   uses: actions/upload-artifact@v2
       #   with:
@@ -73,7 +69,7 @@ jobs:
       #     name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
       #     if-no-files-found: error
 
-      - name: Use OpenDyslxic
+      - name: use OpenDyslxic
         run: git apply ci0.patch
 
       - name: compile again
@@ -87,7 +83,15 @@ jobs:
       - name: rename od
         run: mv hm.pdf assets/hm-od.pdf
 
-      - name: Upload assets
+      # - name: upload PDF
+      #   if: ${{ success() }}
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     path: assets/hm-tg.pdf
+      #     name: hm-tg-${{ env.BUILD_DATE }}-${{ env.GITHUB_TAG }}.pdf
+      #     if-no-files-found: error
+
+      - name: upload assets
         if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
         id: upload-release-assets
         uses: dwenegar/upload-release-assets@v1
@@ -97,23 +101,23 @@ jobs:
           release_id: ${{ needs.create_draft_release.outputs.id }}
           assets_path: assets/
 
-      - name: Remove font customization for html version
+      - name: remove font customization for html version
         run: git apply ci1.patch
 
       - name: compile html
         run: |
-          lwarpmk limages
           lwarpmk html
+          lwarpmk limages
           bibtex hm_html
           lwarpmk printindex
           lwarpmk html1
 
-      - name: Prepare for deployment
+      - name: prepare for deployment
         run: |
           mkdir public
           mv hm-images/ images/ chapter*.html index.html *.css public/
 
-      - name: Deploy release
+      - name: deploy release
         if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
         uses: peaceiris/actions-gh-pages@v3
         with:
