--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -109,6 +109,7 @@ jobs:
 
       - name: compile html
         run: |
+          lwarpmk pdftosvg images/*.pdf
           lwarpmk html
           lwarpmk limages
           bibtex hm_html
@@ -124,6 +125,6 @@ jobs:
         if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: master
           publish_dir: ./public
