--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -2,7 +2,7 @@ on: [push]
 
 jobs:
   create_draft_release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     outputs:
       id: ${{ steps.create_draft_release.outputs.id }}
